# file-sync-monitor

./: .gitignore  AGENTS.md  Package.swift  README.md  README_en.md  package-lock.json  package.json
.build/: build.db  plugin-tools.yaml
.github/workflows/: release-tauri.yml  swift.yml
.sisyphus/run-continuation/: ses_1d5ef0732ffezyHvRFe1TMLWlg.json
Sources/FileSyncMonitor/: FileSyncMonitorApp.swift  Info.plist
desktop-portal/: i18n.js  index.html  main.js  styles.css  wechat-login.html
docs/: IMA抓包接口总结.md  cross_platform_design.md  design.md  functional_requirements.md
docs/previews/: interface-redesign-preview.html  simple-interface-redesign.html
docs/接口/: 抓包接口整理.md
docs/接口抓包详情请求和响应/: [100] Request - ima.qq.com_cgi-bin_activity_center_report_activity.txt  [100] Response - ima.qq.com_cgi-bin_activity_center_report_activity.txt  [101] Request - ima.qq.com_cgi-bin_activity_center_report_activity.txt  [101] Response - ima.qq.com_cgi-bin_activity_center_report_activity.txt  [102] Request - ima.qq.com_cgi-bin_task_assistant_nl_get_podcast_config.txt  [104] Request - ima.qq.com_cgi-bin_task_assistant_nl_get_homepage.txt  [104] Response - ima.qq.com_cgi-bin_task_assistant_nl_get_homepage.txt  [131] Request - ima.qq.com_cgi-bin_task_assistant_nl_get_homepage.txt  [131] Response - ima.qq.com_cgi-bin_task_assistant_nl_get_homepage.txt  [132] Request - ima.qq.com_cgi-bin_intelligent_assistant_http_nl_get_models.txt  [132] Response - ima.qq.com_cgi-bin_intelligent_assistant_http_nl_get_models.txt  (+285 more)
generated-icons/: README.md
scripts/: build_app.sh  tauri-run.cjs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: credentials.rs  db.rs  ima_sync.rs  lib.rs  monitor.rs  tray.rs
sync-kernel/: Cargo.toml  build.rs  tauri.conf.json
sync-kernel/capabilities/: default.json
sync-kernel/icons/: icon.icns
sync-kernel/permissions/: default.toml
sync-kernel/src/: credentials.rs  db.rs  ima_sync.rs  lib.rs  main.rs  monitor.rs  tray.rs
(+440 files in other folders)
