[package]
name = "file-sync-monitor"
version = "2.0.3"
description = "FileSyncMonitor Desktop Application"
authors = ["chenjian"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "file_sync_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
notify = "6"
notify-debouncer-mini = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
uuid = { version = "1", features = ["v4", "serde"] }
rfd = "0.14"
sha1 = "0.10"
hmac = "0.12"
hex = "0.4"
percent-encoding = "2.3"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
